--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -46,12 +46,22 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Input.cs" />
+     <Compile Include="Assets\Scripts\Ennemy.cs" />
      <Compile Include="Assets\Scripts\Items\Item.cs" />
      <Compile Include="Assets\Scripts\Items\Passive.cs" />
+     <Compile Include="Assets\Scripts\Items\Passives\Armor.cs" />
+     <Compile Include="Assets\Scripts\Items\Passives\Boots.cs" />
+     <Compile Include="Assets\Scripts\Items\Passives\Flippers.cs" />
      <Compile Include="Assets\Scripts\Items\Util.cs" />
+     <Compile Include="Assets\Scripts\Items\Utils\Hookshot.cs" />
+     <Compile Include="Assets\Scripts\Items\Utils\Shield.cs" />
+     <Compile Include="Assets\Scripts\Items\Utils\Shovel.cs" />
      <Compile Include="Assets\Scripts\Items\Weapon.cs" />
-     <Compile Include="Assets\Scripts\Move.cs" />
+     <Compile Include="Assets\Scripts\Items\Weapons\Bomb.cs" />
+     <Compile Include="Assets\Scripts\Items\Weapons\Bow.cs" />
+     <Compile Include="Assets\Scripts\Items\Weapons\Sword.cs" />
+     <Compile Include="Assets\Scripts\Items\Weapons\ThrowingKnife.cs" />
+     <Compile Include="Assets\Scripts\Player.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
