--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -83,8 +83,10 @@
      <None Include="Assets\Tiled2Unity\Materials\_ReadMe.txt" />
      <None Include="Assets\Tiled2Unity\Textures\_ReadMe.txt" />
      <None Include="Assets\Tiled2Unity\Imported\map1.tiled2unity.xml" />
+     <None Include="Assets\Tiled2Unity\Imported\map6.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
      <None Include="Assets\Tiled2Unity\Meshes\_ReadMe.txt" />
+     <None Include="Assets\Tiled2Unity\Imported\underground.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\map3.tiled2unity.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
