--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -88,7 +88,9 @@
      <None Include="Assets\Tiled2Unity\Imported\map7.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\map6.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
+     <None Include="Assets\Tiled2Unity\Imported\map9.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Meshes\_ReadMe.txt" />
+     <None Include="Assets\Tiled2Unity\Imported\map10.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\underground.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Imported\map3.tiled2unity.xml" />
   </ItemGroup>
