--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Scripts\Items\Projectiles\Arrow.cs" />
      <Compile Include="Assets\Scripts\Items\Projectiles\Bombo2.cs" />
      <Compile Include="Assets\Scripts\Items\Projectiles\Knife.cs" />
+     <Compile Include="Assets\Scripts\Items\Projectiles\Shovelo.cs" />
      <Compile Include="Assets\Scripts\Items\Utils\Hookshot.cs" />
      <Compile Include="Assets\Scripts\Items\Utils\Shield.cs" />
      <Compile Include="Assets\Scripts\Items\Utils\Shovel.cs" />
