--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Humans\Enemy.cs" />
      <Compile Include="Assets\Scripts\Humans\Human.cs" />
      <Compile Include="Assets\Scripts\Humans\Player.cs" />
+     <Compile Include="Assets\Scripts\IA\GuardIA.cs" />
      <Compile Include="Assets\Scripts\Items\Inherited\Item.cs" />
      <Compile Include="Assets\Scripts\Items\Inherited\Passive.cs" />
      <Compile Include="Assets\Scripts\Items\Inherited\Util.cs" />
@@ -69,6 +70,7 @@
      <Compile Include="Assets\Scripts\Items\Weapons\ThrowingKnife.cs" />
      <Compile Include="Assets\Scripts\Managers\AnimationManager.cs" />
      <Compile Include="Assets\Scripts\Managers\CameraManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\HealthManager.cs" />
      <Compile Include="Assets\Scripts\Managers\InputManager.cs" />
      <Compile Include="Assets\Scripts\Managers\Inventory.cs" />
      <Compile Include="Assets\Scripts\Managers\ItemCreator.cs" />
