--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -1,112 +1,113 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-	<ProductVersion>10.0.20506</ProductVersion>
-	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{5B9FF267-005F-A3BF-219E-FEAE2D8C894F}</ProjectGuid>
-	<OutputType>Library</OutputType>
-	<AppDesignerFolder>Properties</AppDesignerFolder>
-	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
-	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-	<FileAlignment>512</FileAlignment>
-	<BaseDirectory>Assets</BaseDirectory>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>10.0.20506</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{5B9FF267-005F-A3BF-219E-FEAE2D8C894F}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>
+    </RootNamespace>
+    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-	<DebugSymbols>true</DebugSymbols>
-	<DebugType>full</DebugType>
-	<Optimize>false</Optimize>
-	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_2;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE</DefineConstants>
-	<ErrorReport>prompt</ErrorReport>
-	<WarningLevel>4</WarningLevel>
-	<NoWarn>0169</NoWarn>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>Temp\bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_2;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>0169</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-	<DebugType>pdbonly</DebugType>
-	<Optimize>true</Optimize>
-	<OutputPath>Temp\bin\Release\</OutputPath>
-	<DefineConstants>TRACE</DefineConstants>
-	<ErrorReport>prompt</ErrorReport>
-	<WarningLevel>4</WarningLevel>
-	<NoWarn>0169</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>Temp\bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>0169</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-	<Reference Include="System" />
+    <Reference Include="System" />
     <Reference Include="System.XML" />
-	<Reference Include="System.Core" />
-	<Reference Include="System.Xml.Linq" />
-	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
-	</Reference>
-	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
-	</Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="UnityEngine">
+      <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor">
+      <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Humans\Enemy.cs" />
-     <Compile Include="Assets\Scripts\Humans\Human.cs" />
-     <Compile Include="Assets\Scripts\Humans\Player.cs" />
-     <Compile Include="Assets\Scripts\IA\GuardIA.cs" />
-     <Compile Include="Assets\Scripts\IA\SasIA.cs" />
-     <Compile Include="Assets\Scripts\Items\Inherited\Item.cs" />
-     <Compile Include="Assets\Scripts\Items\Inherited\Passive.cs" />
-     <Compile Include="Assets\Scripts\Items\Inherited\Projectile.cs" />
-     <Compile Include="Assets\Scripts\Items\Inherited\Util.cs" />
-     <Compile Include="Assets\Scripts\Items\Inherited\Weapon.cs" />
-     <Compile Include="Assets\Scripts\Items\Passives\Armor.cs" />
-     <Compile Include="Assets\Scripts\Items\Passives\Boots.cs" />
-     <Compile Include="Assets\Scripts\Items\Passives\Flippers.cs" />
-     <Compile Include="Assets\Scripts\Items\Projectiles\Arrow.cs" />
-     <Compile Include="Assets\Scripts\Items\Projectiles\Bombo2.cs" />
-     <Compile Include="Assets\Scripts\Items\Projectiles\Knife.cs" />
-     <Compile Include="Assets\Scripts\Items\Projectiles\Shovelo.cs" />
-     <Compile Include="Assets\Scripts\Items\Projectiles\Swordo.cs" />
-     <Compile Include="Assets\Scripts\Items\Utils\Hookshot.cs" />
-     <Compile Include="Assets\Scripts\Items\Utils\Shield.cs" />
-     <Compile Include="Assets\Scripts\Items\Utils\Shovel.cs" />
-     <Compile Include="Assets\Scripts\Items\Weapons\Bomb.cs" />
-     <Compile Include="Assets\Scripts\Items\Weapons\Bow.cs" />
-     <Compile Include="Assets\Scripts\Items\Weapons\Sword.cs" />
-     <Compile Include="Assets\Scripts\Items\Weapons\ThrowingKnife.cs" />
-     <Compile Include="Assets\Scripts\Managers\AnimationManager.cs" />
-     <Compile Include="Assets\Scripts\Managers\CameraManager.cs" />
-     <Compile Include="Assets\Scripts\Managers\HealthManager.cs" />
-     <Compile Include="Assets\Scripts\Managers\Healthbar.cs" />
-     <Compile Include="Assets\Scripts\Managers\InputManager.cs" />
-     <Compile Include="Assets\Scripts\Managers\Inventory.cs" />
-     <Compile Include="Assets\Scripts\Managers\ItemCreator.cs" />
-     <Compile Include="Assets\Scripts\Managers\ItemMenu.cs" />
-     <Compile Include="Assets\Scripts\Managers\LevelManager.cs" />
-     <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
-     <Compile Include="Assets\Scripts\Obstacles\Obstacle.cs" />
-     <Compile Include="Assets\Scripts\Obstacles\Sand.cs" />
-     <Compile Include="Assets\Scripts\Obstacles\WallD.cs" />
-     <Compile Include="Assets\Scripts\Start\Select.cs" />
-     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
-     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TileAnimator.cs" />
-     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TiledMap.cs" />
-     <None Include="Assets\Tiled2Unity\Imported\map3.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map5.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Prefabs\_ReadMe.txt" />
-     <None Include="Assets\Tiled2Unity\Shaders\shaTiledMap.shader" />
-     <None Include="Assets\Tiled2Unity\Imported\map6.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map4.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map10.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\end.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Materials\_ReadMe.txt" />
-     <None Include="Assets\Tiled2Unity\Imported\map2.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\sas.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Textures\_ReadMe.txt" />
-     <None Include="Assets\Tiled2Unity\Imported\map7.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map1.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map8.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
-     <None Include="Assets\Tiled2Unity\Imported\begin.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Imported\map9.tiled2unity.xml" />
-     <None Include="Assets\Tiled2Unity\Meshes\_ReadMe.txt" />
+    <Compile Include="Assets\Scripts\Humans\Enemy.cs" />
+    <Compile Include="Assets\Scripts\Humans\Human.cs" />
+    <Compile Include="Assets\Scripts\Humans\Player.cs" />
+    <Compile Include="Assets\Scripts\IA\GuardIA.cs" />
+    <Compile Include="Assets\Scripts\IA\SasIA.cs" />
+    <Compile Include="Assets\Scripts\Items\Inherited\Item.cs" />
+    <Compile Include="Assets\Scripts\Items\Inherited\Passive.cs" />
+    <Compile Include="Assets\Scripts\Items\Inherited\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Items\Inherited\Util.cs" />
+    <Compile Include="Assets\Scripts\Items\Inherited\Weapon.cs" />
+    <Compile Include="Assets\Scripts\Items\Passives\Armor.cs" />
+    <Compile Include="Assets\Scripts\Items\Passives\Boots.cs" />
+    <Compile Include="Assets\Scripts\Items\Passives\Flippers.cs" />
+    <Compile Include="Assets\Scripts\Items\Projectiles\Arrow.cs" />
+    <Compile Include="Assets\Scripts\Items\Projectiles\Bombo2.cs" />
+    <Compile Include="Assets\Scripts\Items\Projectiles\Knife.cs" />
+    <Compile Include="Assets\Scripts\Items\Projectiles\Shovelo.cs" />
+    <Compile Include="Assets\Scripts\Items\Projectiles\Swordo.cs" />
+    <Compile Include="Assets\Scripts\Items\Utils\Hookshot.cs" />
+    <Compile Include="Assets\Scripts\Items\Utils\Shield.cs" />
+    <Compile Include="Assets\Scripts\Items\Utils\Shovel.cs" />
+    <Compile Include="Assets\Scripts\Items\Weapons\Bomb.cs" />
+    <Compile Include="Assets\Scripts\Items\Weapons\Bow.cs" />
+    <Compile Include="Assets\Scripts\Items\Weapons\Sword.cs" />
+    <Compile Include="Assets\Scripts\Items\Weapons\ThrowingKnife.cs" />
+    <Compile Include="Assets\Scripts\Managers\AnimationManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\CameraManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\EndGameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\Healthbar.cs" />
+    <Compile Include="Assets\Scripts\Managers\InputManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\Inventory.cs" />
+    <Compile Include="Assets\Scripts\Managers\ItemCreator.cs" />
+    <Compile Include="Assets\Scripts\Managers\ItemMenu.cs" />
+    <Compile Include="Assets\Scripts\Managers\LevelManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
+    <Compile Include="Assets\Scripts\Obstacles\Obstacle.cs" />
+    <Compile Include="Assets\Scripts\Obstacles\Sand.cs" />
+    <Compile Include="Assets\Scripts\Obstacles\WallD.cs" />
+    <Compile Include="Assets\Scripts\Start\Select.cs" />
+    <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
+    <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TileAnimator.cs" />
+    <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TiledMap.cs" />
+    <None Include="Assets\Tiled2Unity\Imported\map3.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map5.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Prefabs\_ReadMe.txt" />
+    <None Include="Assets\Tiled2Unity\Shaders\shaTiledMap.shader" />
+    <None Include="Assets\Tiled2Unity\Imported\map6.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map4.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map10.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\end.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Materials\_ReadMe.txt" />
+    <None Include="Assets\Tiled2Unity\Imported\map2.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\sas.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Textures\_ReadMe.txt" />
+    <None Include="Assets\Tiled2Unity\Imported\map7.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map1.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map8.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
+    <None Include="Assets\Tiled2Unity\Imported\begin.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\map9.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Meshes\_ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -116,5 +117,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  
 </Project>
